force-app/main/default/objects/Value_Map__c/Value_Map__c.object-meta.xml
<CustomObject>
    <description>Source-to-target value pair used by Picklist Value Map transformations.</description>
    <label>Value Map</label>
    <nameField>
        <displayFormat>VM-{00000000}</displayFormat>
        <label>Value Map Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>