force-app/main/default/objects/Value_Map__c/fields/Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Field_Mapping__c</fullName>
    <label>Field Mapping</label>
    <referenceTo>Field_Mapping__c</referenceTo>
    <relationshipLabel>Value Maps</relationshipLabel>
    <relationshipName>ValueMaps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>