force-app/main/default/objects/Value_Map__c/fields/Source_Value__c.field-meta.xml
<CustomField>
    <fullName>Source_Value__c</fullName>
    <label>Source Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>