force-app/main/default/objects/Value_Map__c/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>