force-app/main/default/objects/Value_Map__c/listViews/All_Value_Maps.listView-meta.xml
<ListView>
    <fullName>All_Value_Maps</fullName>
    <columns>NAME</columns>
    <columns>Field_Mapping__c</columns>
    <columns>Source_Value__c</columns>
    <columns>Target_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Value Maps</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>